# src/Dream.Space.Data/Requests/ValidateTradeRequest.cs
@@ -1,0 +1,12 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
+
+namespace Dream.Space.Data.Requests
+{
+    public class ValidateTradeRequest
+    {
+    }
+}
