# src/Dream.Space/src/services/swagger.json
@@ -1809,6 +1809,33 @@
         }
       }
     },
+    "/api/strategy/validate-trade": {
+      "post": {
+        "tags": [
+          "StrategiesApi"
+        ],
+        "operationId": "StrategiesApi_ValidateTrade",
+        "parameters": [
+          {
+            "name": "model",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/ValidateTradeRequest"
+            },
+            "x-nullable": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/ValidateTradeResult"
+            },
+            "x-nullable": true
+          }
+        }
+      }
+    },
     "/api/trade-account/deposit": {
       "post": {
         "tags": [
@@ -1863,21 +1890,13 @@
         }
       }
     },
-    "/api/trade-account//all/{userId}": {
+    "/api/trade-account/all": {
       "get": {
         "tags": [
           "TradeAccountApi"
         ],
         "operationId": "TradeAccountApi_GetAccounts",
-        "parameters": [
-          {
-            "type": "string",
-            "name": "userId",
-            "in": "path",
-            "required": true,
-            "x-nullable": false
-          }
-        ],
+        "parameters": [],
         "responses": {
           "200": {
             "description": "",
@@ -2000,7 +2019,7 @@
         }
       }
     },
-    "/api/trade-account//max-trade-risk/{accountId}": {
+    "/api/trade-account/max-trade-risk/{accountId}": {
       "get": {
         "tags": [
           "TradeAccountApi"
@@ -2028,7 +2047,7 @@
         }
       }
     },
-    "/api/trade-account//overall-balance/{accountId}": {
+    "/api/trade-account/overall-balance/{accountId}": {
       "get": {
         "tags": [
           "TradeAccountApi"
@@ -2056,7 +2075,7 @@
         }
       }
     },
-    "/api/trade-account//trade-balance/{accountId}": {
+    "/api/trade-account/trade-balance/{accountId}": {
       "get": {
         "tags": [
           "TradeAccountApi"
@@ -3805,6 +3824,76 @@
         },
         "active": {
           "type": "boolean"
+        }
+      }
+    },
+    "ValidateTradeRequest": {
+      "type": "object",
+      "additionalProperties": false
+    },
+    "ValidateTradeResult": {
+      "type": "object",
+      "additionalProperties": false,
+      "required": [
+        "strategyId",
+        "isValid"
+      ],
+      "properties": {
+        "strategyId": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "isValid": {
+          "type": "boolean"
+        },
+        "ruleSets": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/RuleSetValidationResult"
+          }
+        }
+      }
+    },
+    "RuleSetValidationResult": {
+      "type": "object",
+      "additionalProperties": false,
+      "required": [
+        "ruleSetId",
+        "isValid"
+      ],
+      "properties": {
+        "ruleSetId": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "isValid": {
+          "type": "boolean"
+        },
+        "rules": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/RuleValidationResult"
+          }
+        }
+      }
+    },
+    "RuleValidationResult": {
+      "type": "object",
+      "additionalProperties": false,
+      "required": [
+        "ruleId",
+        "isValid"
+      ],
+      "properties": {
+        "ruleId": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "isValid": {
+          "type": "boolean"
+        },
+        "message": {
+          "type": "string"
         }
       }
     },
